<resources>
    <string name="app_name">我的课</string>
    <string name="splash_logo_description">我的课</string>
    <string name="fragment_login_username_hint">用户名</string>
    <string name="fragment_login_password_hint">密码</string>
    <string name="fragment_login_divider_hint">好久不见？</string>
    <string name="fragment_login_button_login">登录</string>
    <string name="fragment_login_toRegister_hint">新朋友？</string>
    <string name="fragment_login_warn_emptyUsername">用户名不能为空</string>
    <string name="fragment_login_warn_emptyPassword">密码不能为空</string>
    <string name="fragment_login_warn_wrongCredentials">用户名或密码错误</string>
    <string name="fragment_login_successfully">登陆成功</string>
    <string name="fragment_register_username_hint">用户名</string>
    <string name="fragment_register_password1_hint">密码</string>
    <string name="fragment_register_password2_hint">确认密码</string>
    <string name="fragment_register_divider_hint">欢迎你，我的朋友</string>
    <string name="fragment_register_button_register">注册</string>
    <string name="fragment_register_nickname_hint">昵称</string>
    <string name="fragment_register_grade_hint">年级</string>
    <string name="fragment_register_toLogin_hint">老朋友？</string>
    <string name="fragment_register_warn_duplicateUsername">用户名已存在，请重试</string>
    <string name="fragment_register_warn_diffPasswords">两次密码输入不一致</string>
    <string name="fragment_register_warn_emptyUsername">用户名不能为空</string>
    <string name="fragment_register_warn_emptyPassword">密码不能为空</string>
    <string name="fragment_register_warn_emptyNickname">昵称不能为空</string>
    <string name="fragment_register_warn_shortUsername">用户名不能少于四位</string>
    <string name="fragment_register_warn_shortPassword">密码不能少于六位</string>
    <string name="fragment_register_successfully">注册成功</string>
    <!-- for index activity -->
    <string name="activity_index_search_hint">搜课程 搜老师</string>
    <string name="activity_index_text_tab_course">课程</string>
    <string name="activity_index_text_tab_discover">发现</string>
    <string name="activity_index_text_tab_user">我的</string>
    <string name="activity_index_toast_press_back_again_to_exit">再按返回键退出</string>
    <string name="activity_index_search_detail_button_by_course">课程名</string>
    <string name="activity_index_search_detail_button_by_teacher">老师名</string>
    <!-- for courselist fragment -->
    <string name="fragment_courselist_floatingbutton_label_rec">推荐分高优先</string>
    <string name="fragment_courselist_floatingbutton_label_use">内容有用优先</string>
    <string name="fragment_courselist_floatingbutton_label_viv">上课有趣优先</string>
    <string name="fragment_courselist_floatingbutton_label_ocu">占时间少优先</string>
    <string name="fragment_courselist_floatingbutton_label_sco">期末分高优先</string>
    <string name="fragment_courselist_floatingbutton_label_rol">点名少者优先</string>
    <!-- for course item of courselist fragment -->
    <string name="item_fragment_courselist_addcomment">老司机有话说</string>
    <string name="item_fragment_courselist_teacherLabel">教师</string>
    <string name="item_fragment_courselist_recScore">%1$.1f分</string>
    <string name="item_fragment_courselist_recComment_4">非常棒</string>
    <string name="item_fragment_courselist_recComment_3">很棒</string>
    <string name="item_fragment_courselist_recComment_2">一般般</string>
    <string name="item_fragment_courselist_recComment_1">还行吧</string>
    <string name="item_fragment_courselist_recComment_0">雷勿踩</string>
    <string name="item_fragment_courselist_commentCount">%1$d条评价</string>
    <string name="item_fragment_courselist_otherScores">有用%1$.1f 有趣%2$.1f 占时%3$.1f 给分%4$.1f 点名%5$.1f</string>
    <string name="footer_fragment_courselist_showmore">正在努力加载中...</string>
    <!-- for course item of discover fragment -->
    <string name="item_fragment_discover_peopleCount">%1$d条评价</string>
    <string name="item_fragment_discover_button_details">戳详情</string>
    <string name="footer_fragment_discover_nomore">已经到最低啦！</string>
    <!-- for user fragment -->
    <string name="fragment_user_wechat">微信：%1$s</string>
    <string name="fragment_user_intro">简介：%1$s</string>
    <string name="fragment_user_myFavorite">我的收藏</string>
    <string name="fragment_user_myComments">我的评论</string>
    <string name="fragment_user_changeProfile">修改个人信息</string>
    <string name="fragment_user_changePass">修改密码</string>
    <string name="fragment_user_logout">退出登录</string>
    <string name="fragment_user_unloggedin">未登录</string>
    <string name="fragment_user_click_to_login">点击登录</string>
    <string name="fragment_user_please_login">请先登录</string>
    <string name="fragment_user_profile_undefined">未设置</string>

    <string name="internet_connection_failed">网络连接失败，请重试</string>
    <!--for course activity-->
    <string name="activity_course_overallrecomm">综合推荐指数</string>
    <string name="activity_course_usfull">内容好否？</string>
    <string name="activity_course_vivid">上课爽否？</string>
    <string name="activity_course_timeoccu">占时少否？</string>
    <string name="activity_course_scoring">给分高否？</string>
    <string name="activity_course_rollcall">点名少否？</string>
    <string name="activity_course_old_drivers">  名老司机发表了看法</string>
    <string name="activity_course_checkall">查看全部评论</string>
    <string name="activity_course_add_comment">我要评论</string>
    <string name="activity_course_add_favorite">我要收藏</string>
    <!--for teacher activity-->
    <string name="activity_teacher_old_drivers">嗯，老司机们这样说</string>
    <string name="activity_teacher_check_all_comments">查看全部评论</string>
    <!--comment/addcomment-->
    <string name="activity_addcomment_button_submit">嗯，提交</string>
    <string name="activity_addcomment_attrname_usefulness">内容好否？</string>
    <string name="activity_addcomment_attrdescrip_usefulness">从老师讲授知识层面来讲，内容对自己有益程度；内容有益，请给多星。</string>
    <string name="activity_addcomment_attrname_vividness">上课爽否？</string>
    <string name="activity_addcomment_attrdescrip_vividness">上课时，课堂氛围情况；课堂氛围活跃，老师授课生动有趣，请给多星。</string>
    <string name="activity_addcomment_attrname_rollcall">点名少否？</string>
    <string name="activity_addcomment_attrdescrip_rollcall">根据自己学习经历，进行评估；点名频率低，请给多星。</string>
    <string name="activity_addcomment_attrname_timeoccupation">占时少否？</string>
    <string name="activity_addcomment_attrdescrip_timeoccupation">根据自己的学习经历，与其他同类型课程比较；占用课余时间少，请给多星。</string>
    <string name="activity_addcomment_attrname_scorehigh">给分高否？</string>
    <string name="activity_addcomment_attrdescrip_scorehigh">根据自己的学习经历，与其他同类型课程比较；期末给分高，请给多星。</string>
    <string name="activity_addcomment_warn_nocommentcontent">老司机你忘了留言啦~</string>
    <string name="activity_addcomment_reply_positive">哦，我回去写。</string>
    <string name="activity_addcomment_alertdialog_title">啊哦</string>
    <!-- for comment items of comment activity -->
    <string name="item_comment_activity_recScore">推荐指数：</string>
    <string name="item_comment_activity_likeCount">点赞数</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="title_activity_change_profile">ChangeProfileActivity</string>
</resources>
