<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_index_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.courseratingsystem.app.activity.IndexActivity">

    <FrameLayout
        android:id="@+id/activity_index_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/activity_index_layout_search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_index_search_height"
        android:layout_alignParentTop="true"
        android:background="@color/splashBackColor"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:background="@drawable/activity_index_search_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/activity_index_search_icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:src="@drawable/ic_search_24dp" />

            <EditText
                android:id="@+id/activity_index_input_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:background="@null"
                android:hint="@string/activity_index_search_hint"
                android:inputType="text"
                android:textColor="@color/splashBackColor"
                android:textColorHint="@color/lightGrey"
                android:textCursorDrawable="@drawable/activity_login_cursor"
                android:textSize="@dimen/activity_index_search_textSize" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/activity_index_bar_footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_index_tab_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/pureWhite"
        android:orientation="vertical"
        android:paddingBottom="4dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="3.5dp"
            android:background="@color/lightGrey" />

        <LinearLayout
            android:id="@+id/activity_index_layout_tab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_index_text_courseTab"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/activity_index_tab_course"
                android:gravity="center"
                android:text="@string/activity_index_text_tab_course"
                android:textColor="@drawable/activity_index_tab_textstyle"
                android:textSize="@dimen/activity_index_tab_textSize" />

            <TextView
                android:id="@+id/activity_index_text_discoverTab"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/activity_index_tab_discovery"
                android:gravity="center"
                android:text="@string/activity_index_text_tab_discover"
                android:textColor="@drawable/activity_index_tab_textstyle"
                android:textSize="@dimen/activity_index_tab_textSize" />

            <TextView
                android:id="@+id/activity_index_text_userTab"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/activity_index_tab_user"
                android:gravity="center"
                android:text="@string/activity_index_text_tab_user"
                android:textColor="@drawable/activity_index_tab_textstyle"
                android:textSize="@dimen/activity_index_tab_textSize" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_index_search_detail_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/activity_index_layout_search"
        android:background="@color/bgGrey"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center">

            <TextView
                android:id="@+id/activity_index_search_detail_button_by_course"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/activity_index_search_detail_button_bg"
                android:drawablePadding="2dp"
                android:drawableTop="@drawable/activity_index_search_detail_button_by_course"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/activity_index_search_detail_button_by_course"
                android:textColor="@drawable/activity_index_search_detail_button_textstyle"
                android:textSize="@dimen/activity_index_search_detail_textSize" />

            <TextView
                android:id="@+id/activity_index_search_detail_button_by_teacher"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="50dp"
                android:layout_toEndOf="@id/activity_index_search_detail_button_by_course"
                android:background="@drawable/activity_index_search_detail_button_bg"
                android:drawablePadding="2dp"
                android:drawableTop="@drawable/activity_index_search_detail_button_by_teacher"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/activity_index_search_detail_button_by_teacher"
                android:textColor="@drawable/activity_index_search_detail_button_textstyle"
                android:textSize="@dimen/activity_index_search_detail_textSize" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
