<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_user_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_index_tab_height"
    android:layout_marginTop="@dimen/activity_index_search_height"
    android:background="@color/bgGrey"
    tools:context="com.courseratingsystem.app.fragment.UserFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
        android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/pureWhite"
                app:cardCornerRadius="0dp"
                app:cardElevation="3dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:gravity="center_vertical">

                    <RelativeLayout
                        android:id="@+id/fragment_user_info_first_relative_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/fragment_user_image_person_icon"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/default_personal_image" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/fragment_user_info_text_margin_left"
                            android:layout_toEndOf="@id/fragment_user_image_person_icon">

                            <TextView
                                android:id="@+id/fragment_user_text_nickname"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Nickname"
                                android:textColor="@color/splashBackColor"
                                android:textSize="@dimen/fragment_user_info_text_size_large" />

                            <TextView
                                android:id="@+id/fragment_user_text_grade"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignBottom="@id/fragment_user_text_nickname"
                                android:layout_marginStart="@dimen/fragment_user_info_text_margin_left"
                                android:layout_toEndOf="@id/fragment_user_text_nickname"
                                android:text="Grade"
                                android:textColor="@color/lightGrey"
                                android:textSize="@dimen/fragment_user_info_text_size_medium" />

                            <TextView
                                android:id="@+id/fragment_user_text_username"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignStart="@id/fragment_user_text_nickname"
                                android:layout_below="@id/fragment_user_text_nickname"
                                android:layout_marginTop="@dimen/fragment_user_info_text_margin_top"
                                android:text="Username"
                                android:textColor="@color/lightGrey"
                                android:textSize="@dimen/fragment_user_info_text_size_small" />
                        </RelativeLayout>
                    </RelativeLayout>

                    <View
                        android:id="@+id/fragment_user_info_divider"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_below="@id/fragment_user_info_first_relative_layout"
                        android:layout_marginTop="@dimen/fragment_user_card_margin"
                        android:background="@color/lightGrey" />

                    <TextView
                        android:id="@+id/fragment_user_text_wechat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/fragment_user_info_divider"
                        android:layout_below="@id/fragment_user_info_divider"
                        android:layout_marginTop="@dimen/fragment_user_card_margin"
                        android:text="@string/fragment_user_wechat"
                        android:textColor="@color/lightGrey"
                        android:textSize="@dimen/fragment_user_info_text_size_small" />

                    <TextView
                        android:id="@+id/fragment_user_text_intro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/fragment_user_text_wechat"
                        android:layout_below="@id/fragment_user_text_wechat"
                        android:layout_marginTop="@dimen/fragment_user_info_text_margin_top"
                        android:text="@string/fragment_user_intro"
                        android:textColor="@color/lightGrey"
                        android:textSize="@dimen/fragment_user_info_text_size_small" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_user_card_margin"
                android:background="@color/pureWhite"
                app:cardCornerRadius="0dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/fragment_user_card_padding">

                    <LinearLayout
                        android:id="@+id/fragment_user_layout_myFavorite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/fragment_user_image_myFavorite"
                            android:layout_width="@dimen/fragment_user_icon_size"
                            android:layout_height="@dimen/fragment_user_icon_size"
                            android:src="@drawable/ic_sort_24dp" />

                        <TextView
                            android:id="@+id/fragment_user_text_myFavorite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/fragment_user_card_padding"
                            android:text="@string/fragment_user_myFavorite" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginBottom="@dimen/fragment_user_margin_between_lines"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="@dimen/fragment_user_margin_between_lines"
                        android:background="@color/lightGrey" />

                    <LinearLayout
                        android:id="@+id/fragment_user_layout_myComments"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/fragment_user_image_myComments"
                            android:layout_width="@dimen/fragment_user_icon_size"
                            android:layout_height="@dimen/fragment_user_icon_size"
                            android:src="@drawable/ic_sort_24dp" />

                        <TextView
                            android:id="@+id/fragment_user_text_myComments"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/fragment_user_card_padding"
                            android:text="@string/fragment_user_myComments" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_user_card_margin"
                android:background="@color/pureWhite"
                app:cardCornerRadius="0dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/fragment_user_card_padding">

                    <LinearLayout
                        android:id="@+id/fragment_user_layout_changeProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/fragment_user_image_changeProfile"
                            android:layout_width="@dimen/fragment_user_icon_size"
                            android:layout_height="@dimen/fragment_user_icon_size"
                            android:src="@drawable/ic_sort_24dp" />

                        <TextView
                            android:id="@+id/fragment_user_text_changeProfile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/fragment_user_card_padding"
                            android:text="@string/fragment_user_changeProfile" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginBottom="@dimen/fragment_user_margin_between_lines"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="@dimen/fragment_user_margin_between_lines"
                        android:background="@color/lightGrey" />

                    <LinearLayout
                        android:id="@+id/fragment_user_layout_changePass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/fragment_user_image_changePass"
                            android:layout_width="@dimen/fragment_user_icon_size"
                            android:layout_height="@dimen/fragment_user_icon_size"
                            android:src="@drawable/ic_sort_24dp" />

                        <TextView
                            android:id="@+id/fragment_user_text_changePass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/fragment_user_card_padding"
                            android:text="@string/fragment_user_changePass" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_user_card_margin"
                android:gravity="center"
                android:padding="@dimen/fragment_user_card_padding">

                <Button
                    android:id="@+id/fragment_user_button_logout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/warnRedLight"
                    android:text="@string/fragment_user_logout"
                    android:textColor="@color/pureWhite" />

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
